# weather-dashboard

./: README.md  dashboard.py  data_processing.py  pyproject.toml  requirements.txt
output/: current_temp.csv  forecast_temp.csv  location.csv  merged.csv  stats.csv
