[project]
name = "agoda-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.14.0",
    "pydantic>=2.10.0",
    "ruff>=0.7.4",
    "streamlit>=1.40.1",
]
